--- a/cryptostats-backend/package.json
+++ b/cryptostats-backend/package.json
@@ -28,9 +28,11 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@types/reflect-metadata": "^0.1.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "mongoose": "^6.8.2",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
