connect backend to frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:3002",
   "dependencies": {
     "@craco/craco": "^6.4.2",
     "@emotion/react": "^11.10.5",
