--- a/cryptostats-backend/package.json
+++ b/cryptostats-backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@types/reflect-metadata": "^0.1.0",
     "bcrypt": "^5.1.0",
@@ -34,6 +35,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.2",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
